--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Section Accueil -->
     <section id="accueil" class="hero">
       <div class="hero-content">
@@ -52,6 +51,133 @@
         </div>
       </div>
     </section>
+
+    <section id="competences" class="competences"></section>
+      <h2>Compétences du BUT Informatique</h2>
+
+      <div class="competences-grid">
+        <!-- Compétence 1 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Réaliser un développement d'application</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Développement d'applications avec Java, C#</li>
+              <li>Création d'interfaces graphiques</li>
+              <li>Tests et documentation du code</li>
+              <li>Utilisation de frameworks modernes</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 90%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Compétence 2 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Optimiser des applications informatiques</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Analyse et optimisation des performances</li>
+              <li>Gestion de la mémoire et des ressources</li>
+              <li>Amélioration des algorithmes</li>
+              <li>Profilage et benchmarking</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 85%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Compétence 3 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Administrer des systèmes informatiques communicants complexes</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Configuration de serveurs Linux/Windows</li>
+              <li>Gestion des réseaux</li>
+              <li>Mise en place de solutions de virtualisation</li>
+              <li>Administration de bases de données</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 80%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Compétence 4 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Gérer des données de l'information</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Conception de bases de données</li>
+              <li>Manipulation de données SQL/NoSQL</li>
+              <li>Intégration de données</li>
+              <li>Sécurisation des données</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 85%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Compétence 5 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Conduire un projet</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Gestion de projet Agile/Scrum</li>
+              <li>Planification et suivi de projet</li>
+              <li>Communication avec les parties prenantes</li>
+              <li>Gestion des risques</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 75%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Compétence 6 -->
+        <div class="competence-card">
+          <div class="competence-header">
+            <h3>Collaborer au sein d'une équipe informatique</h3>
+          </div>
+          <div class="competence-content">
+            <ul class="competence-details">
+              <li>Travail en équipe sur des projets complexes</li>
+              <li>Utilisation d'outils collaboratifs (Git, Jira)</li>
+              <li>Revue de code et pair programming</li>
+              <li>Documentation technique</li>
+            </ul>
+            <div class="competence-niveau">
+              <div class="niveau-bar">
+                <div class="niveau" style="width: 85%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!-- Section Formation -->
     <section id="formation" class="formation">
