--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li><a href="#accueil">Accueil</a></li>
           <li><a href="#apropos">À propos</a></li>
           <li><a href="#competences">Compétences</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -251,6 +252,35 @@
               <li>Dockerisation de l'application</li>
             </ul>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section Contact -->
+    <section id="contact" class="contact">
+      <h2>Contact</h2>
+      <div class="contact-container">
+        <div class="contact-info">
+          <h3>Informations de contact</h3>
+          <p><i class="fas fa-envelope"></i> yann.rouquie@gmail.com</p>
+          <p><i class="fas fa-map-marker-alt"></i> Toulouse, France</p>
+        </div>
+        <div class="contact-form">
+          <form id="contact-form">
+            <div class="form-group">
+              <label for="name">Nom</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Envoyer</button>
+          </form>
         </div>
       </div>
     </section>
