--- a/index.html
+++ b/index.html
@@ -1,294 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Mathéo KATBIE</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <title>Portfolio | Rouquie Yann</title>
   </head>
   <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-      <div class="nav-content">
-        <div class="logo">YR</div>
-        <ul class="nav-links">
-          <li><a href="#accueil">Accueil</a></li>
-          <li><a href="#apropos">À propos</a></li>
-          <li><a href="#competences">Compétences</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </div>
-    </nav>
-    <!-- Section Accueil -->
-    <section id="accueil" class="hero">
-      <div class="hero-content">
-        <h1>Yann ROUQUIÉ</h1>
-        <p class="subtitle">3ème année BUT Informatique</p>
-        <div class="hero-tags">
-          <span class="tag">Java</span>
-          <span class="tag">C++</span>
-          <span class="tag">Python</span>
-          <span class="tag">PHP</span>
-        </div>
-      </div>
-    </section>
-
-    <!-- Section À propos -->
-    <section id="apropos" class="about">
-      <h2>À propos de moi</h2>
-      <div class="about-content">
-        <div class="about-text">
-          <p>
-            Passionné par le développement web et les nouvelles technologies, je suis un développeur full stack avec une
-            solide formation en informatique.
-          </p>
-          <p>Mon parcours à l'IUT de Blagnac m'a permis d'acquérir des compétences variées en développement.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="competences" class="competences"></section>
-      <h2>Compétences du BUT Informatique</h2>
-
-      <div class="competences-grid">
-        <!-- Compétence 1 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Réaliser un développement d'application</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Développement d'applications avec Java, C#</li>
-              <li>Création d'interfaces graphiques</li>
-              <li>Tests et documentation du code</li>
-              <li>Utilisation de frameworks modernes</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 90%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Compétence 2 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Optimiser des applications informatiques</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Analyse et optimisation des performances</li>
-              <li>Gestion de la mémoire et des ressources</li>
-              <li>Amélioration des algorithmes</li>
-              <li>Profilage et benchmarking</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 85%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Compétence 3 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Administrer des systèmes informatiques communicants complexes</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Configuration de serveurs Linux/Windows</li>
-              <li>Gestion des réseaux</li>
-              <li>Mise en place de solutions de virtualisation</li>
-              <li>Administration de bases de données</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 80%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Compétence 4 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Gérer des données de l'information</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Conception de bases de données</li>
-              <li>Manipulation de données SQL/NoSQL</li>
-              <li>Intégration de données</li>
-              <li>Sécurisation des données</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 85%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Compétence 5 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Conduire un projet</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Gestion de projet Agile/Scrum</li>
-              <li>Planification et suivi de projet</li>
-              <li>Communication avec les parties prenantes</li>
-              <li>Gestion des risques</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 75%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Compétence 6 -->
-        <div class="competence-card">
-          <div class="competence-header">
-            <h3>Collaborer au sein d'une équipe informatique</h3>
-          </div>
-          <div class="competence-content">
-            <ul class="competence-details">
-              <li>Travail en équipe sur des projets complexes</li>
-              <li>Utilisation d'outils collaboratifs (Git, Jira)</li>
-              <li>Revue de code et pair programming</li>
-              <li>Documentation technique</li>
-            </ul>
-            <div class="competence-niveau">
-              <div class="niveau-bar">
-                <div class="niveau" style="width: 85%"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- Section Formation -->
-    <section id="formation" class="formation">
-      <h2>Formation</h2>
-      <div class="timeline">
-        <div class="timeline-item">
-          <h3>Bachelor Universitaire de Technologie Informatique</h3>
-          <p class="date">2022 - 2025</p>
-          <p class="location">IUT Blagnac - Université Toulouse Jean Jaures</p>
-          <p>Parcours réalisation d'applications : conception, développement, validation</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Section Compétences -->
-    <section id="competences" class="competences">
-      <h2>Compétences Techniques</h2>
-      <div class="skills-container">
-        <div class="skill-category">
-          <h3>Développement d'applications</h3>
-          <ul>
-            <li>Java / C++ / Python 3 : Programmation orientée objet</li>
-            <li>C : Gestion de mémoire dynamique</li>
-            <li>Conception UML, développement, documentation et tests unitaire</li>
-          </ul>
-        </div>
-        <div class="skill-category">
-          <h3>Base de données</h3>
-          <ul>
-            <li>SQL : Conception / Création / Modification / Interrogation</li>
-            <li>PL/SQL : Programmation procédurale</li>
-            <li>Conceptualisation avec diagramme de classes UML</li>
-          </ul>
-        </div>
-        <div class="skill-category">
-          <h3>Développement Web</h3>
-          <ul>
-            <li>PHP - JavaScript - Vue.js - Angular</li>
-            <li>HTML 5 - CSS 3</li>
-          </ul>
-        </div>
-        <div class="skill-category">
-          <h3>Administration Système</h3>
-          <ul>
-            <li>Script Bash, PowerShell</li>
-            <li>Gestion des processus Shell</li>
-            <li>OS : Linux : Ubuntu / Debian 11.6 bullseye</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Section Expériences -->
-    <section id="experiences" class="experiences">
-      <h2>Expériences Professionnelles</h2>
-      <div class="experience-container">
-        <div class="experience-item">
-          <h3>Développeur Logiciels - Centre national de recherche scientifique</h3>
-          <p class="date">2023 - 2025</p>
-          <div class="experience-details">
-            <h4>Projet CLIMSO-DB</h4>
-            <ul>
-              <li>Dévelopment Python</li>
-              <li>Framework Flask / Vue.js</li>
-              <li>Gestion de base de données : PostGreL</li>
-            </ul>
-            <h4>Projet PolarBase</h4>
-            <ul>
-              <li>Refactorisation de l'application existante en Vue.js</li>
-              <li>Modification de la base de données / Optimisation des requêtes SQL</li>
-              <li>Dockerisation de l'application</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Section Contact -->
-    <section id="contact" class="contact">
-      <h2>Contact</h2>
-      <div class="contact-container">
-        <div class="contact-info">
-          <h3>Informations de contact</h3>
-          <p><i class="fas fa-envelope"></i> yann.rouquie@gmail.com</p>
-          <p><i class="fas fa-map-marker-alt"></i> Toulouse, France</p>
-        </div>
-        <div class="contact-form">
-          <form id="contact-form">
-            <div class="form-group">
-              <label for="name">Nom</label>
-              <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Envoyer</button>
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer" style="text-align: center; padding: 1rem; background-color: #f0f0f0; color: #333">
-      <p>&copy; 2024 Yann ROUQUIÉ. Tous droits réservés.</p>
-    </footer>
-
-    <script src="js/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
